axum-egui-macro/tests/ui/missing_return.stderr
error: server functions must return `Result<T, ServerFnError>`. The #[server] macro generates code that serializes the return value, so a Result type is required to handle potential errors.
 --> tests/ui/missing_return.rs:5:1
  |
5 | #[server]
  | ^^^^^^^^^
  |
  = note: this error originates in the attribute macro `server` (in Nightly builds, run with -Z macro-backtrace for more info)
